--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@developer-hub/liquid-glass": "^1.2.3",
+    "@svgr/webpack": "^8.1.0",
+    "framer-motion": "^12.18.1",
+    "lenis": "^1.3.4",
+    "lucide-react": "^0.522.0",
+    "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.5.0",
+    "react-responsive": "^10.0.1",
+    "react-use-measure": "^2.1.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
