--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@developer-hub/liquid-glass": "^1.2.3",
+    "@react-three/drei": "^10.3.0",
+    "@react-three/fiber": "^9.1.2",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^12.18.1",
     "lenis": "^1.3.4",
@@ -20,10 +22,12 @@
     "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
-    "react-use-measure": "^2.1.7"
+    "react-use-measure": "^2.1.7",
+    "three": "^0.177.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "5.8.3"
   }
 }
