--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@developer-hub/liquid-glass": "^1.2.3",
+    "@r2u/react-ar-components": "^5.4.16",
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
     "@svgr/webpack": "^8.1.0",
     "framer-motion": "^12.18.1",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.4",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
